--- a/PL101/scheem/index.html
+++ b/PL101/scheem/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Scheem Online Interpreter</title>
+    <title>Scheem Interpreter by QWRp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="data/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="scheem_test.html">Unit Test</a></li>
+                        <li><a href="/test/">Unit Tests</a></li>
                     </ul>
                 </div>
             </div>
