--- a/PL101/scheem/index.html
+++ b/PL101/scheem/index.html
@@ -40,7 +40,7 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="/test/">Unit Tests</a></li>
+                        <li><a href="test/">Unit Tests</a></li>
                     </ul>
                 </div>
             </div>
