--- a/PL101/scheem/index.html
+++ b/PL101/scheem/index.html
@@ -106,7 +106,7 @@
     <script src="data/js/scheme.js"></script>
     <script src="data/js/scheem.js"></script>
     <script src="data/js/tracetohtml.js"></script>
-    <script src="../../../PL101/scheem/interpreter.js"></script>
+    <script src="https://raw.github.com/QWRp/PL101/master/scheem/interpreter.js"></script>
 
     <script>
         $("#error_box").hide();
